# dbt-mesh-demo

./: .gitignore  Dockerfile  README.md  pyproject.toml
dbt_projects/gold_project/: dbt_project.yml  dependencies.yml  packages.yml  profiles.yml
dbt_projects/gold_project/models/gold/: customer_360.sql  product_performance.sql  revenue_summary.sql  schema.yml
dbt_projects/silver_project/: dbt_project.yml  profiles.yml
dbt_projects/silver_project/models/: exposures.yml
dbt_projects/silver_project/models/silver/: customers.sql  order_items.sql  orders.sql  orders_daily.sql  schema.yml
dbt_projects/silver_project/models/staging/: schema.yml  stg_customers.sql  stg_order_items.sql  stg_orders.sql  stg_products.sql
dbt_projects/silver_project/seeds/: raw_customers.csv  raw_order_items.csv  raw_orders.csv  raw_products.csv  schema.yml
dbt_projects/silver_project/snapshots/: customers_snapshot.sql
src/dbt_mesh_demo/components/: dbt_mesh_component.py
src/dbt_mesh_demo/defs/gold_transform/: defs.yaml
src/dbt_mesh_demo/defs/silver_transform/: defs.yaml
