[project]
name = "dbt_mesh_demo"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster==1.12.21",
    "dagster-cloud>=1.12.21",
    "dagster-dbt>=0.28.21",
    "dbt-duckdb>=1.10.1",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dbt_mesh_demo"
registry_modules = [
    "dbt_mesh_demo.components.*",
]


